[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "async-durable-execution"
version = "0.1.0"
description = 'Async Lambda Durable Execution SDK for Python'
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = []
dependencies = ["aioboto3"]
